package domain.clima;

public enum Alerta {
  LLUVIA,
  TORMENTA,
  GRANIZO,
  NIEVE
}
