package domain.clima;

import domain.usuario.acciones.AccionPorAlerta;

import java.time.LocalDate;
import java.util.List;

public class AlertaMeteorologica {
  private Alerta alerta;
  private List<AccionPorAlerta> acciones;
  private LocalDate fecha;



}
