package domain.usuario;

public class Admin {
}
