package domain.usuario;

public class Empleado {
}
