package domain.usuario.acciones;

import domain.clima.Alerta;

public class Mail implements AccionPorAlerta{
  public void ejecutar(Alerta alerta){}
}
