package domain.usuario.acciones;

import domain.clima.Alerta;

public class Notificacion implements AccionPorAlerta {
  public void ejecutar(Alerta alerta){}
}
