package domain.usuario.acciones;

import domain.clima.Alerta;

public class Recalculo  implements AccionPorAlerta{
  public void ejecutar(Alerta alerta){}
}
