@startuml
'https://plantuml.com/class-diagram

class Prenda{
Color colorPrincipal
Color colorSecundario
Tela tela
RangoDeTemperaturas temperaturasDeUso
Tipo tipo
Categoria categoria
esParaCalor()
}

class Usuario{
List<Guardarropa> guardarropas
BuilderPrenda borrador
List<LocalDate> usosAccuWeather
List<AccionPorAlerta> accionesPorAlerta
setear**""X""**(**""AtributoX""**)
guardarPrenda()
usoServicioAccuWeather()
usosServicioAccuWeatherUltimoDia()
}

class Recomendador{
recomendar(Usuario usuario, String ciudad)
temperaturaEnLaCiudad(String ciudad)
}

abstract class Sastre{
fabricarUniforme()
//fabricarCalzado()//
//fabricarParteSuperior()//
//fabricarParteInferior()//
}

class SastreColegioX{
fabricarCalzado()
fabricarParteSuperior()
fabricarParteInferior()
}

class Uniforme{
Prenda prendaSuperior
Prenda prendaInferior
Prenda calzado
}

class BuilderPrenda{
//Atributos de Prenda//
toPrenda()
esValida()
}

class RangoDeTemperaturas{
Double temperaturaMinima
Double temperaturaMaxima
Boolean independiente
esTemperaturaValida(Double temp)
}

class Guardarropa{
  List<Usuario> duenios
  List<Prenda> prendas
  List<Prenda> sugerenciasAgregar
  List<Prenda> sugerenciasEliminar
  listarPrendasAEliminar()
  listarPrendasAAgregar()
  eliminarPrendaRecomendada(Integer seleccion)
  agregarPrendaRecomendada(Integer seleccion)
  listarPrendas(List<Prenda> listaPrendas)
}

interface AccionPorAlerta{
    ejecutar()
}

class Mail{
    ejecutar()
}
class Notificacion{
    ejecutar()
}
class Recalculo{
    ejecutar()
}

class RepositorioAlertasMeteorologicas{
    getInstance()
    ultimaAlerta()
}

class AlertaMeteorologica{
    Alerta alerta
    List<AccionPorAlerta> acciones
    LocalDate fecha
}

enum Alerta{
    LLUVIA,
    TORMENTA,
    NIEVE
}

class Admin{
}

class Empleado{
}


SastreColegioX-u-|>Sastre
Sastre->Uniforme
Usuario-u->BuilderPrenda
Usuario-l->Prenda
Prenda-u->RangoDeTemperaturas
Usuario->Guardarropa
AlertaMeteorologica -d> RepositorioAlertasMeteorologicas

Usuario-d>AccionPorAlerta
AlertaMeteorologica->Alerta
Notificacion..>AccionPorAlerta
Recalculo..>AccionPorAlerta
Mail..>AccionPorAlerta

@enduml